add customized project config

--- a/config/main.conf
+++ b/config/main.conf
@@ -1,3 +1,6 @@
 {
-    "basePath": "d:\\work\\speedup\\analysis"
+    "base-project": "speedup-ace",
+    "speedup-ace": {
+        "root" : "d:\\work\\speedup\\speedup-ace"
+    }
 }
