--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "amdDependencies": {},
   "dependencies": {
     "commander": "^2.15.1",
-    "fstorm": "^0.1.3",
-    "ftp": "^0.3.10"
+    "ftp": "^0.3.10",
+    "later": "^1.2.0"
   }
 }
