--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "commander": "^2.15.1",
     "ftp": "^0.3.10",
-    "later": "^1.2.0"
+    "node-schedule": "^1.3.0"
   }
 }
