--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "commander": "^2.15.1",
     "ftp": "^0.3.10",
+    "node-json-minify": "^1.0.0",
     "node-schedule": "^1.3.0"
   }
 }
