--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dmr",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "discription": "Data Mining Routine",
-  "main": "bin/start.js",
+  "preferGlobal": true,
   "scripts": {
     "doc": "make doc",
-    "clean": "make clean"
+    "clean": "make clean",
+    "reload": "npm pack && npm install dmr-0.0.4.tgz -g"
   },
   "devDependencies": {},
   "amdDependencies": {},
@@ -14,5 +15,18 @@
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
     "node-schedule": "^1.3.0"
-  }
+  },
+  "keywords": [
+    "log data mining",
+    "performance analysis"
+  ],
+  "engines": {
+    "node": ">= 4.0.x"
+  },
+  "bin": {
+    "dmr": "./bin/dmr"
+  },
+  "main": "./lib/dmr.js",
+  "license": "MIT",
+  "author": "qiansc"
 }
