--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "commander": "^2.15.1",
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "ssh2-sftp-client-fast": "^2.2.0"
   },
   "keywords": [
     "log data mining",
