--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
     "node-schedule": "^1.3.0",
-    "ssh2-sftp-client-fast": "^2.2.0"
+    "ssh2-sftp-client-fast": "^2.2.0",
+    "ssh2-streams": "^0.2.1"
   },
   "keywords": [
     "log data mining",
