--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dmr",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "discription": "Data Mining Routine",
   "preferGlobal": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "commander": "^2.15.1",
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "object-hash": "^1.3.0"
   },
   "keywords": [
     "log data mining",
