--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "dmr",
-  "version": "0.1.1",
+  "version": "0.1.7",
   "discription": "Data Mining Routine",
   "preferGlobal": true,
   "scripts": {
     "doc": "make doc",
     "clean": "make clean",
-    "reload": "npm pack && npm install dmr-0.1.0.tgz -g"
+    "reload": "npm pack && npm install dmr-0.1.7.tgz -g"
   },
   "devDependencies": {},
   "amdDependencies": {},
   "dependencies": {
     "commander": "^2.15.1",
+    "deformat": "^1.2.0",
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
     "node-schedule": "^1.3.0",
