--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "ftp": "^0.3.10",
     "node-json-minify": "^1.0.0",
     "node-schedule": "^1.3.0",
-    "object-hash": "^1.3.0"
+    "object-hash": "^1.3.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0"
   },
   "keywords": [
     "log data mining",
