--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "dmr",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "discription": "Data Mining Routine",
   "preferGlobal": true,
   "scripts": {
     "doc": "make doc",
     "clean": "make clean",
-    "reload": "npm pack && npm install dmr-0.2.6.tgz -g"
+    "reload": "npm pack && npm install dmr-0.2.7.tgz -g"
   },
   "devDependencies": {},
   "amdDependencies": {},
   "dependencies": {
     "commander": "^2.15.1",
-    "deformat": "^1.2.0",
-    "ftp": "^0.3.10",
-    "node-json-minify": "^1.0.0",
-    "node-schedule": "^1.3.0",
-    "object-hash": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "decimal": "0.0.2",
+    "deformat": "^1.2.0",
     "express": "~4.16.0",
+    "ftp": "^0.3.10",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-json-minify": "^1.0.0",
+    "node-schedule": "^1.3.0",
+    "object-hash": "^1.3.0"
   },
   "keywords": [
     "log data mining",
