--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "dmr",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "discription": "Data Mining Routine",
   "preferGlobal": true,
   "scripts": {
     "doc": "make doc",
     "clean": "make clean",
-    "reload": "npm pack && npm install dmr-0.2.9.tgz -g"
+    "reload": "npm pack && npm install dmr-0.2.10.tgz -g"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/qiansc/dmr"
+  },
+  "bugs": {
+    "url": "https://github.com/qiansc/dmr/issues"
+  },
+  "homepage": "https://github.com/qiansc/dmr/blob/master/README.md",
   "devDependencies": {},
   "amdDependencies": {},
   "dependencies": {
